# TSI-testOpenGL

./: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  README.md  Renderer.cpp  Renderer.h  VertexBuffer.cpp  main.cpp
res/shaders/: Basic.shader
